# up

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: e2e.yml  release.yml
src/: banner.rs  bin.rs  main.rs  manifest.rs  perm_path.rs  tools.rs  updates.rs
src/cmds/: check.rs  default.rs  install.rs  mod.rs  show.rs  use.rs
tests/e2e/: README.md  fresh_install.sh  update_install.sh
