[package]
name = "tx3up"
version = "0.1.0"
edition = "2024"
description = "Installer for the tx3 toolchain"
authors = ["TxPipe <hello@txpipe.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
self-replace = "1.5.0"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0.12"
octocrab = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
