[package]
name = "tx3up"
version = "0.4.2"
edition = "2024"
description = "Installer for the tx3 toolchain"
authors = ["TxPipe <hello@txpipe.com>"]
license = "Apache-2.0"
repository = "https://github.com/tx3-lang/up"

[dependencies]
self-replace = "1.5.0"
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0.12"
octocrab = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1.7"
color-print = "0.3.7"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
